--- a/style.css
+++ b/style.css
@@ -115,10 +115,10 @@ body {
 
 @media screen and (max-width: 1200px){
   .bird {
-    height: 25px;
-    width: 25px;
+    height: 50px;
+    width: 50px;
   }
   .message {
-     font-size: 2vh;
+     font-size: 30px;
    }
 }
